k8s/services/product-service/product-service-s.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: ecommerce-microservice
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
  - port: 8500
    targetPort: 8500
